# DeathStarBench

mediaMicroservices/: CMakeLists.txt  Dockerfile  docker-compose.yml
mediaMicroservices/test/: run-test.bash  testCastInfoService.py  testComposeReviewService.py  testComposeReviewServiceE2E.py  testMovieIdService.py  testMovieInfoService.py  testMovieReviewService.py  testPlotService.py  testRatingService.py  testReviewStorageService.py  testTextService.py  testUniqueIdService.py  testUserReviewService.py  testUserService.py
socialNetwork/: CMakeLists.txt  Dockerfile  docker-compose.yml
socialNetwork/src/ComposePostService/: ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: HomeTimelineService.cpp
socialNetwork/src/MediaService/: MediaService.cpp
socialNetwork/src/PostStorageService/: PostStorageService.cpp
socialNetwork/src/SocialGraphService/: SocialGraphService.cpp
socialNetwork/src/TextService/: TextService.cpp
socialNetwork/src/UniqueIdService/: UniqueIdService.cpp
socialNetwork/src/UrlShortenService/: UrlShortenService.cpp
socialNetwork/src/UserMentionService/: UserMentionService.cpp
socialNetwork/src/UserService/: UserService.cpp
socialNetwork/src/UserTimelineService/: UserTimelineService.cpp
socialNetwork/test/: TestComposePostE2E.py  TestPostStorage.py  TestReadHomeTimelineService.py  TestSocialGraph.py  TestTextService.py  TestUniqueIdService.py  TestUrlShortenService.py  TestUserMentionService.py  TestUserService.py  TestUserTimelineService.py  TestWriteHomeTimelineService.py  run-test.bash  testComposePost.py
(+13 files in other folders)
